# name: test_clear_reset_session[False]
  <class 'dict'> {
    'authentication': <class 'dict'> {
      'token': '3c469e9d6c5875d37a43f353d4f88e61fcf812c66eee3457465a40b0da4153e0',
      'user_id': 'bf1b993c',
    },
    'created_at': <class 'datetime'>,
    'ip': '1.1.1.1',
    'reset': None,
  }
---
# name: test_clear_reset_session[False].1
  <class 'dict'> {
    'authentication': <class 'dict'> {
      'token': '3c469e9d6c5875d37a43f353d4f88e61fcf812c66eee3457465a40b0da4153e0',
      'user_id': 'bf1b993c',
    },
    'created_at': <class 'datetime'>,
    'ip': '1.1.1.1',
    'reset': None,
  }
---
# name: test_clear_reset_session[True]
  <class 'dict'> {
    'authentication': None,
    'created_at': <class 'datetime'>,
    'ip': '1.1.1.1',
    'reset': <class 'dict'> {
      'code': 'reset_code',
      'remember': False,
      'user_id': 'bf1b993c',
    },
  }
---
# name: test_clear_reset_session[True].1
  <class 'dict'> {
    'authentication': None,
    'created_at': <class 'datetime'>,
    'ip': '1.1.1.1',
    'reset': None,
  }
---
# name: test_clear_reset_session[True].2
  ResourceNotFoundError('Session is invalid')
---
# name: test_create_anonymous_session
  <class 'dict'> {
    'authentication': None,
    'created_at': <class 'str'>,
    'ip': '1.1.1.1',
    'reset': None,
  }
---
# name: test_create_reset_session
  <class 'dict'> {
    'authentication': None,
    'created_at': <class 'str'>,
    'ip': '1.1.1.1',
    'reset': <class 'dict'> {
      'code': 'reset_code',
      'remember': False,
      'user_id': 'bf1b993c',
    },
  }
---
# name: test_create_session[False]
  <class 'dict'> {
    'authentication': <class 'dict'> {
      'token': '3c469e9d6c5875d37a43f353d4f88e61fcf812c66eee3457465a40b0da4153e0',
      'user_id': 'bf1b993c',
    },
    'created_at': <class 'str'>,
    'ip': '1.1.1.1',
    'reset': None,
  }
---
# name: test_create_session[True]
  <class 'dict'> {
    'authentication': <class 'dict'> {
      'token': '3c469e9d6c5875d37a43f353d4f88e61fcf812c66eee3457465a40b0da4153e0',
      'user_id': 'bf1b993c',
    },
    'created_at': <class 'str'>,
    'ip': '1.1.1.1',
    'reset': None,
  }
---
# name: test_delete
  <class 'dict'> {
    'authentication': None,
    'created_at': <class 'datetime'>,
    'ip': '1.1.1.1',
    'reset': None,
  }
---
# name: test_delete.1
  ResourceNotFoundError('Session is invalid')
---
# name: test_get_anonymous
  <class 'dict'> {
    'authentication': None,
    'created_at': <class 'datetime'>,
    'ip': '1.1.1.1',
    'reset': None,
  }
---
# name: test_get_anonymous.1
  ResourceNotFoundError('Session is invalid')
---
# name: test_get_authenticated[snapshot]
  <class 'dict'> {
    'authentication': <class 'dict'> {
      'token': '3c469e9d6c5875d37a43f353d4f88e61fcf812c66eee3457465a40b0da4153e0',
      'user_id': 'bf1b993c',
    },
    'created_at': <class 'datetime'>,
    'ip': '1.1.1.1',
    'reset': None,
  }
---
# name: test_get_reset_data
  <class 'dict'> {
    'code': 'reset_code',
    'remember': False,
    'user_id': 'bf1b993c',
  }
---
